test/Fail/customised/Issue7953/Test.agda
open-import Agda.Primitive -- typo that hides the following module header

module Issue7953.Test where
